--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Ashe's Website</title>
 </head>
 <body>
-        <h1>Hello World!!!!!!</h1>
-        <p>Welcome to this little website of mine :3
-        <p>Thanks for Visiting :3 (Please don't leave) - If you wanna learn more about me, <a href="aboutme.html">Click This Silly Link :3 </a></p>
+    <img src="CSC 106.1 - Draft Website Assets/csc106_banner.jpg" alt="">
+    <h1>Hello World!!!!!! I'm Ashe (Ashley)!!!!!!</h1>
+    <p>Welcome to this little website of mine :3
+    <p>Thanks for Visiting :3 (Please don't leave) <br>
+     If you wanna learn more about me, <a href="aboutme.html">Click This Silly Link :3 </a></p>
     </p>
 </body>
 </html></html>
