--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ashe's Website</title>
 </head>
 <body>
-    <img src="CSC 106.1 - Draft Website Assets/csc106_banner.jpg" alt="">
+    <img src="csc106_banner.jpg" alt="">
     <h1>Hello World!!!!!! I'm Ashe (Ashley)!!!!!!</h1>
     <p>Welcome to this little website of mine :3
     <p>Thanks for Visiting :3 (Please don't leave) <br>
