--- a/aboutme.html
+++ b/aboutme.html
@@ -5,8 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Ashe</title>
 </head>
+<style>
+    H1 {color:white}
+    H3 {color:white}
+    p {color:white}
+    a {color:rgb(255, 0, 0)}
+    body {background-color: rgb(7, 6, 6)}
+    h1 {background-color: rgb(176, 0, 192);}
+    H3 {background-color: rgb(147, 22, 151);}
+</style>
 <body>
-    <h1>About Ashe (Ashley)</h1>
-    <p>Heyheyhey, I like games and stuff :3</p>
+    <img src="csc106_banner.jpg" alt="">
+    <table>
+       <thead>
+            <tr>
+            <th><a href="index.html"><img src="home.png"></th>
+            <th><a href="aboutme.html"><img src="aboutme.png"></th>
+            <th> <a href="javascripts_page.html"><img src="js.png"></th> 
+    </table>
+    <h1>About Ashe (Ashley) <strong> <em>[She/Her/Hers]</em></strong></h1>
+    <p>Heyheyhey, I like games and stuff :3 <br> <br>
+        <h3> <em> Just kidding, there's more to me than that. </em></h3>
+        <P>My name is Ashe (though I'm heavy testing and enjoying Ashley) and I'm a bit of an internet nerd. <br>
+        Not in a bad way or anything, but I've grown up with and around the internet. <br>
+        I like to play video games (the hope is to make them some day), write, do music, watch stuff, and be online. <br>
+        I like comedy, and try to incorprate it a fair bit into my stuff, and try to keep things a little snappy- <br>
+        so, here are some pictures of me- one being me in real life, the other my online general persona. <br>
+        I will try to keep at least this page a little more on the serious side though. <br> <br>
+<img src="meirlcoding.jpg" alt="a picture of me coding this website late night in my dorm on september 9th, 2024" width="250"> 
+<img src="meonlinepersona.png" width="520" alt="a picture of my online persona (being a cute purple haired internet girl)"><br>
+        There is DEFINETLY not a funny picture by  <a href="secretfunny.html">clicking here</a> 
+        
+    </p>
 </body>
 </html>
