--- a/index.html
+++ b/index.html
@@ -5,12 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashe's Website</title>
 </head>
+<style>
+    H1 {color:white}
+    H2 {color:white}
+    p {color:white}
+    a {color:white}
+    body {background-color: rgb(7, 6, 6)}
+    h1 {background-color: rgb(176, 0, 192);}
+    H2 {background-color: rgb(147, 22, 151);}
+</style>
 <body>
     <img src="csc106_banner.jpg" alt="">
+    <table>
+       <thead>
+            <tr>
+            <th><a href="index.html"><img src="home.png"></th>
+            <th><a href="aboutme.html"><img src="aboutme.png"></th>
+            <th> <a href="javascripts_page.html"><img src="js.png"></th> 
+    </table>
     <h1>Hello World!!!!!! I'm Ashe (Ashley)!!!!!!</h1>
     <p>Welcome to this little website of mine :3
+        <h2><em>What is this website?</em></h2>
+        <p>
+            This website serves as a sort of portfolio to my CSC 106 class, and maybe more down the line. <br>
+            As a general note, I will be updating this website likely not only for class, but for fun as well. <br>
+            Here I will have a general homepage, a little area where you can learn about me, and a portfolio <br>
+            wfor my Javascripts made in class (maybe even out of class? :o).
+        </p>
     <p>Thanks for Visiting :3 (Please don't leave) <br>
-     If you wanna learn more about me, <a href="aboutme.html">Click This Silly Link :3 </a></p>
+     If you wanna learn more about me, <a href="aboutme.html">Click This Silly Link :3</a> <br>
+     Or just click the hyperlink buttons at the top, I worked hard on them... <strong> PLEASE USE THEM-</strong>
+    </p>
     </p>
 </body>
 </html></html>
