--- a/secretfunny.html
+++ b/secretfunny.html
@@ -10,7 +10,7 @@
 </style>
 <body>
     <img src="csc106_banner.jpg" alt="">
-    <table>
+    <table width="800px">
        <thead>
             <tr>
             <th><a href="index.html"><img src="home.png"></th>
