--- a/javascripts_page.html
+++ b/javascripts_page.html
@@ -11,7 +11,7 @@
 </style>
 <body>
     <img src="csc106_banner.jpg" alt="">
-    <table>
+    <table width="800"">
        <thead>
             <tr>
             <th><a href="index.html"><img src="home.png"></th>
