--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     H2 {background-color: rgb(147, 22, 151);}
 </style>
 <body>
-    <img src="csc106_banner.jpg" alt="">
+    <img src="csc106_banner.png" alt="">
     <table width="800px">
        <thead>
             <tr>
