--- a/secretfunny.html
+++ b/secretfunny.html
@@ -9,7 +9,7 @@
     body {background-color: rgb(7, 6, 6);}
 </style>
 <body>
-    <img src="csc106_banner.jpg" alt="">
+    <img src="csc106_banner.png" alt="">
     <table width="800px">
        <thead>
             <tr>
