--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
     H3 {background-color: rgb(147, 22, 151);}
 </style>
 <body>
-    <img src="csc106_banner.jpg" alt="">
+    <img src="csc106_banner.png" alt="">
     <table width="800">
        <thead>
             <tr>
