--- a/aboutme.html
+++ b/aboutme.html
@@ -3,16 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Ashe</title>
+    <title>About Ashley</title>
 </head>
 <style>
     H1 {color:white}
     H3 {color:white}
-    p {color:white}
+    p {color:rgb(238, 238, 238)}
+    p {background-color: rgba(245, 169, 184, 0.767);}
+    #ashe-yap1 {margin-left: 259px;}
+    #ashe-yap2 {margin-right: 375px;}
+    #ashe-yap-list2 {margin-right: 375px; }
+    #ashe-yap-list2 {background-color: rgba(245, 169, 184, 0.774);}
+    #ashe-yap-list2 {color: rgb(238, 238, 238);}
+    #ashe-yap-list {margin-left: 259px}
+    #ashe-yap-list {background-color: rgb(245, 169, 184, 0.774);}
+    #ashe-yap-list {color: rgb(238, 238, 238);}
     a {color:rgb(255, 0, 0)}
-    body {background-color: rgb(7, 6, 6)}
-    h1 {background-color: rgb(176, 0, 192);}
-    H3 {background-color: rgb(147, 22, 151);}
+    body {background-color: rgb(7, 6, 6) }
+    body {background-image: url(mybackground.png)}
+    body{font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
+    h1 {background-color: rgba(91, 205, 250, 0.829);}
+    H3 {background-color: rgb(91,206,250,0.829);}
+    #meirl{float: left;}
+    #borgopic {float: right;}
+    #borgopic {margin-top: 48px;}
 </style>
 <body>
     <img src="csc106_banner.png" alt="">
@@ -23,19 +37,57 @@
             <th><a href="aboutme.html"><img src="aboutme.png"></th>
             <th> <a href="javascripts_page.html"><img src="js.png"></th> 
     </table>
-    <h1>About Ashe (Ashley) <strong> <em>[She/Her/Hers]</em></strong></h1>
-    <p>Heyheyhey, I like games and stuff :3 <br> <br>
+    
+    <h1>About Ashley (Ashe) <strong> <em>[She/Her/Hers]</em></strong></h1>
+    <div id="actual-info">
+    <p id="actual-text">Heyheyhey, I like games and stuff :3 <br> 
         <h3> <em> Just kidding, there's more to me than that. </em></h3>
-        <P>My name is Ashe (though I'm heavy testing and enjoying Ashley) and I'm a bit of an internet nerd. <br>
-        Not in a bad way or anything, but I've grown up with and around the internet. <br>
-        I like to play video games (the hope is to make them some day), write, do music, watch stuff, and be online. <br>
-        I like comedy, and try to incorprate it a fair bit into my stuff, and try to keep things a little snappy- <br>
-        so, here are some pictures of me- one being me in real life, the other my online general persona. <br>
-        I will try to keep at least this page a little more on the serious side though. <br> <br>
-<img src="meirlcoding.jpg" alt="a picture of me coding this website late night in my dorm on september 9th, 2024" width="250"> 
-<img src="meonlinepersona.png" width="520" alt="a picture of my online persona (being a cute purple haired internet girl)"><br>
-        There is DEFINETLY not a funny picture by  <a href="secretfunny.html">clicking here</a> 
-        
+        <img id="meirl" src="meirlcoding.jpg" alt="a picture of me coding this website late night in my dorm on september 9th, 2024" width="250">
+        <P id="ashe-yap1"> 
+             My name is Ashley (though Ashe works too) and I'm a bit of an internet nerd. 
+        Not in a bad way or anything, but I've grown up with and around the internet. 
+        I like to play video games (the hope is to make them some day), write, do music, watch stuff, and be online. 
+        I like comedy, and try to incorprate it a fair bit into my stuff, and try to keep things a little snappy- 
+        so, here are some pictures of me- one being me in real life, the other my online general persona. 
+        I will try to keep at least this page a little more on the serious side though. <br>
+
+        <ul id="ashe-yap-list"> <strong><em><u>Things I like (but specific):</u></em></strong>
+            <li>Soulsborne video games</li>
+            <li>Basically most games that arent sports games and have passion built into them</li>
+            <li>The Series Jojo's Bizarre Adventure</li>
+            <li>The electric guitar</li>
+            <li>The arts as a whole</li>
+            <li> Creative Writing!</li>
+            <li> Most forms of non-creative writing</li>
+            <li>Coding!!!!</li>
+        </ul>
+    <br>
+    <h3>Getting a little more into the idea of my online persona...</h3>
+    <img id="borgopic" src="meonlinepersona.png" width="375" alt="a picture of my online persona (being a cute purple haired internet girl)">
+<p id="ashe-yap2">   
+While you may normally see me as the Ashely you saw in the segment before-
+ there is a fair amount of people who know me as Borgo 
+ (a girl who plays games on the internet with one of them vtuber avatars).
+ I just thought overall it's pretty neat and I wanted to include that in this little about me segment- 
+ as I believe she is an important aspect in things I do online (as well as just being me).
+
+ <ul id="ashe-yap-list2"> 
+    <strong><em><u>Things That I also find important to me:</u></em></strong>
+    <li> I am a <u> PROUD</u> Transgender Woman. I use (She/Her) pronouns.</li>
+    <li>My friends - they helped make me who I am</li>
+  <li>My work - I find any work I do to be very important to me. Wether professionally or not.</li> 
+  <li>Video games - they gave me passion and love for everything I've ended up doing </li>
+  <li>Yuki - (my bestie) If you meet her, say hi for me!</li>  
+ </ul> 
+</p>
+
+<h3>That's basically it for me! <br>
+If you have any more questions, reach out through one of these methods: <br>
+email: <a href="ashe.vargas@uri.edu">ashe.vargas@uri.edu</a> <br>
+Phone number: (401)543-9047 <br>
+Instagram (for the really informal): @b0rgo</h3>
+      <br><br><br>  There is DEFINETLY not a funny picture by  <a href="secretfunny.html">clicking here</a> 
+    </div>   
     </p>
 </body>
 </html>
