--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ashe's Website</title>
+    <title>Ashley's Website</title>
 </head>
 <style>
     H1 {color:white}
     H2 {color:white}
     p {color:white}
-    a {color:white}
+    ul {color:white}
+    p{background-color: rgba(192, 118, 199, 0.568);}
+    a {color:rgb(0, 110, 255)}
     body {background-color: rgb(7, 6, 6)}
-    h1 {background-color: rgb(176, 0, 192);}
-    H2 {background-color: rgb(147, 22, 151);}
+    body {background-image: url(blahajverse.png);}
+    body{font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
+    h1 {background-color: rgba(235, 17, 255, 0.568);}
+    H2 {background-color: rgba(235, 17, 255, 0.568);}
+    Ul {background-color: rgba(192, 118, 199, 0.568);}
 </style>
 <body>
     <img src="csc106_banner.png" alt="">
@@ -23,19 +28,47 @@
             <th><a href="aboutme.html"><img src="aboutme.png"></th>
             <th> <a href="javascripts_page.html"><img src="js.png"></th> 
     </table>
+    <div id="actual-info">
     <h1>Hello World!!!!!! I'm Ashe (Ashley)!!!!!!</h1>
+    <div id="actual-info">
     <p>Welcome to this little website of mine :3
         <h2><em>What is this website?</em></h2>
+        <div id="body-text">
         <p>
             This website serves as a sort of portfolio to my CSC 106 class, and maybe more down the line. <br>
             As a general note, I will be updating this website likely not only for class, but for fun as well. <br>
             Here I will have a general homepage, a little area where you can learn about me, and a portfolio <br>
-            wfor my Javascripts made in class (maybe even out of class? :o).
+            for my Javascripts made in class (maybe even out of class? :o). I also want to quickly note, I made sure all the background colors were the same between each page... but I couldn't help make a background image for all 3... please forgive me for this technicality ;w; <br>
         </p>
+      <h2> Ideas for this website after CSC06:</h2>
+      <ul> Here are some ideas I had for after CSC106:
+        <li>A general portfolio for code things I do</li>
+        <li>A portfolio exclusively for my school work (with updates to about me as needed)</li>
+        <li>A way to get people I know to say "google sites kinda sucks compared to html"</li>
+        <li>A good story</li>
+      <li>Blahaj empire website</li>  
+    </ul>
+
+<h2>Some Sitewide terms and definitons:
+</h2>
+<ul>
+You may see a thing you don't recognize, here's some of those things!
+<li>Blahaj - Ikea Shark Plushie</li>
+<li>Blahajverse - universe of the blahaj</li>
+<li>Rosahaj - the pink version of our favorite Ikea shark</li> 
+<li>jokes - I hope they're funny</li>   
+</ul>
+<h2>
+    That's it for the home page... for now >:3c
+</h2>
+
+    </div>
+    <div id="body-text">
     <p>Thanks for Visiting :3 (Please don't leave) <br>
      If you wanna learn more about me, <a href="aboutme.html">Click This Silly Link :3</a> <br>
-     Or just click the hyperlink buttons at the top, I worked hard on them... <strong> PLEASE USE THEM-</strong>
+     Or just click the hyperlink buttons at the top- I worked hard on them... <u><em><strong> PLEASE USE THEM-</strong></em></u>
     </p>
     </p>
+</div>
 </body>
 </html></html>
