--- a/javascripts_page.html
+++ b/javascripts_page.html
@@ -7,7 +7,12 @@
 </head>
 <style>
     H1 {color:white}
+    h1 {background-color: rgba(230, 207, 1, 0.712);}
+    p{background-color: rgba(230, 207, 1, 0.712);}
+    p{color: white}
     body {background-color: rgb(7, 6, 6)}
+    body {background-image: url(blahajcode.png)}
+    body{font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 </style>
 <body>
     <img src="csc106_banner.png" alt="">
@@ -18,7 +23,9 @@
             <th><a href="aboutme.html"><img src="aboutme.png"></th>
             <th> <a href="javascripts_page.html"><img src="js.png"></th> 
     </table>
+    <div id="body-text">
     <h1>This page is empty... for now </h1>
-    
+    <p> Please be patient- the Blahajs are hard at work coding stuff for this secion of the website!</p>
+</div>
 </body>
 </html>
