--- a/aboutme.html
+++ b/aboutme.html
@@ -24,6 +24,7 @@
     body{font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
     h1 {background-color: rgba(91, 205, 250, 0.829);}
     H3 {background-color: rgb(91,206,250,0.829);}
+    body{width: 800px}
     #meirl{float: left;}
     #borgopic {float: right;}
     #borgopic {margin-top: 48px;}
