--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     h1 {background-color: rgba(235, 17, 255, 0.568);}
     H2 {background-color: rgba(235, 17, 255, 0.568);}
     Ul {background-color: rgba(192, 118, 199, 0.568);}
+    body{width: 800px}
 </style>
 <body>
     <img src="csc106_banner.png" alt="">
