--- a/javascripts_page.html
+++ b/javascripts_page.html
@@ -13,6 +13,7 @@
     body {background-color: rgb(7, 6, 6)}
     body {background-image: url(blahajcode.png)}
     body{font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
+    body{width: 800px}
 </style>
 <body>
     <img src="csc106_banner.png" alt="">
