--- a/secretfunny.html
+++ b/secretfunny.html
@@ -7,6 +7,7 @@
 </head>
 <style>
     body {background-color: rgb(7, 6, 6);}
+    body{width: 800px}
     body{font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 </style>
 <body>
