--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ashley's Website</title>
+    <title> Ashley's Website</title>
+    <link rel="icon" href="blahaj.ico" type="image/x-icon">
 </head>
 <style>
     H1 {color:white}
@@ -30,7 +31,7 @@
             <th> <a href="javascripts_page.html"><img src="js.png"></th> 
     </table>
     <div id="actual-info">
-    <h1>Hello World!!!!!! I'm Ashe (Ashley)!!!!!!</h1>
+    <h1>Hello World!!!!!! I'm Ashley (Ashe)!!!!!!</h1>
     <div id="actual-info">
     <p>Welcome to this little website of mine :3
         <h2><em>What is this website?</em></h2>
