--- a/javascripts_page.html
+++ b/javascripts_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ashley's Java Scripts</title>
 </head>
 <style>
     H1 {color:white}
