--- a/secretfunny.html
+++ b/secretfunny.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ashley's secretfunny page :p</title>
 </head>
 <style>
     body {background-color: rgb(7, 6, 6);}
