--- a/javascripts_page.html
+++ b/javascripts_page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashley's Java Scripts</title>
+    <link rel="icon" href="blahaj.ico" type="image/x-icon">
 </head>
 <style>
     H1 {color:white}
