--- a/secretfunny.html
+++ b/secretfunny.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashley's secretfunny page :p</title>
+    <link rel="icon" href="blahaj.ico" type="image/x-icon">
 </head>
 <style>
     body {background-color: rgb(7, 6, 6);}
