--- a/aboutme.html
+++ b/aboutme.html
@@ -19,6 +19,8 @@
     #ashe-yap-list {margin-left: 259px}
     #ashe-yap-list {background-color: rgb(245, 169, 184, 0.774);}
     #ashe-yap-list {color: rgb(238, 238, 238);}
+    #business-card {background-color:rgba(91, 178, 250, 0.829);}
+    #business-card-heading {background-color:rgba(91, 178, 250, 0.829);}
     a {color:rgb(255, 0, 0)}
     body {background-color: rgb(7, 6, 6) }
     body {background-image: url(mybackground.png)}
@@ -29,6 +31,12 @@
     #meirl{float: left;}
     #borgopic {float: right;}
     #borgopic {margin-top: 48px;}
+    #bridgetvana {float: right;}
+    #bridgetvana {margin-right: 25px}
+    #mehappysep10 {margin-right: 3}
+    #mehappysep10 {float:left} 
+    #business-card {text-align: center;}
+    #business-card-heading{text-align: center;}
 </style>
 <body>
     <img src="csc106_banner.png" alt="">
@@ -83,11 +91,15 @@ While you may normally see me as the Ashely you saw in the segment before-
  </ul> 
 </p>
 
-<h3>That's basically it for me! <br>
+<h3 id="business-card-heading">That's basically it for me! </h3>
+<p id="business-card">
+<img id="bridgetvana" src="IMG_9186.jpg" width="139px"></img>
+<img id="mehappysep10" src="IMG_9304.jpg" width="100px">
 If you have any more questions, reach out through one of these methods: <br>
 email: <a href="ashe.vargas@uri.edu">ashe.vargas@uri.edu</a> <br>
 Phone number: (401)543-9047 <br>
-Instagram (for the really informal): @b0rgo</h3>
+Instagram (for the really informal): @b0rgo</p>
+
       <br><br><br>  There is DEFINETLY not a funny picture by  <a href="secretfunny.html">clicking here</a> 
     </div>   
     </p>
