--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,9 @@
     #ashe-yap-list {background-color: rgb(245, 169, 184, 0.774);}
     #ashe-yap-list {color: rgb(238, 238, 238);}
     #business-card {background-color:rgba(91, 178, 250, 0.829);}
+ 
     #business-card-heading {background-color:rgba(91, 178, 250, 0.829);}
+    #business-card-heading {margin-right: px}
     a {color:rgb(255, 0, 0)}
     body {background-color: rgb(7, 6, 6) }
     body {background-image: url(mybackground.png)}
@@ -32,7 +34,7 @@
     #borgopic {float: right;}
     #borgopic {margin-top: 48px;}
     #bridgetvana {float: right;}
-    #bridgetvana {margin-right: 25px}
+    #bridgetvana {margin-right: 0px}
     #mehappysep10 {margin-right: 3}
     #mehappysep10 {float:left} 
     #business-card {text-align: center;}
