--- a/javascripts_page.html
+++ b/javascripts_page.html
@@ -8,13 +8,16 @@
 </head>
 <style>
     H1 {color:white}
-    h1 {background-color: rgba(230, 207, 1, 0.712);}
-    p{background-color: rgba(230, 207, 1, 0.712);}
+    h1 {background-color: rgba(255, 230, 0, 0.822);}
+    H2 {color:white}
+    h2 {background-color: rgba(230, 207, 1, 0.712);}
+    p{background-color: rgba(230, 177, 1, 0.89);}
     p{color: white}
     body {background-color: rgb(7, 6, 6)}
     body {background-image: url(blahajcode.png)}
     body{font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
     body{width: 800px}
+
 </style>
 <body>
     <img src="csc106_banner.png" alt="">
@@ -26,8 +29,24 @@
             <th> <a href="javascripts_page.html"><img src="js.png"></th> 
     </table>
     <div id="body-text">
-    <h1>This page is empty... for now </h1>
+    <h1>This page is empty... for now- wait it has stuff now- </h1>
     <p> Please be patient- the Blahajs are hard at work coding stuff for this secion of the website!</p>
+    <br><br>
+
+    <h1>My CSC 106 Avatar!</h1>
+    <p>Remember what I said in my about me section about my online persona? This is... not at all her- this is the little avatar I made for my csc 106 course! She's made 100% in java script :3c </p>
+    <iframe id = "avatar" src="https://code-lab.app/program/5ed82b57-4070-496b-8653-a7dea3af08e9/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
+
+    <h2>Avatar Dance! (The Ashley Dance!)</h2>
+    <p id="dancetext"> This little silly program makes my avatar dance around the scrren! As it stands, to get my avatar to move around, just hit the reset button! Of course, this lil silly dance is made in 100% Javascript. I will likely say that for every program going forward- I like saying that.</p>
+    <iframe id="avatardance" src="https://code-lab.app/program/5ad3342a-c7aa-4de0-8046-410798dc4bf2/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
+
+    <h2>Ashley Racing a Fish?!</h2>
+    <p>Well well well, Ashley and the fish finally decided to settle their differences by a good old fashioned race... The outcome of the race is random every time! Just hit the reset button, and the fish and Ashley will start to race again! ...100% MADE IN HTML- BOOM- I SAID IT- YEAH-</p>
+    <iframe id="avatar_racing" src="https://code-lab.app/program/084ac25d-5190-4021-8584-4e879cb4fadd/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
 </div>
 </body>
 </html>
