--- a/javascripts_page.html
+++ b/javascripts_page.html
@@ -44,9 +44,24 @@
     <br><br>
 
     <h2>Ashley Racing a Fish?!</h2>
-    <p>Well well well, Ashley and the fish finally decided to settle their differences by a good old fashioned race... The outcome of the race is random every time! Just hit the reset button, and the fish and Ashley will start to race again! ...100% MADE IN HTML- BOOM- I SAID IT- YEAH-</p>
+    <p>Well well well, Ashley and the fish finally decided to settle their differences by a good old fashioned race... The outcome of the race is random every time! Just hit the reset button, and the fish and Ashley will start to race again! ...100% MADE IN JAVASCRIPT- BOOM- I SAID IT- YEAH-</p>
     <iframe id="avatar_racing" src="https://code-lab.app/program/084ac25d-5190-4021-8584-4e879cb4fadd/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
     <br><br>
-</div>
+
+    <h2>Ashley goes insane- I mean makes her avatar dance... WITH FUNCTIONS</h2>
+    <p>Have you ever considered that sometimes things are long? ... I have, and we made them both longer and shorter by making the exact same program of my avatar dancing... but with Functions!!!! Same rules as before, click restart and watch my avatar do a lil dance, made of course in 100% Javascript, as the food people would say! </p>
+    <iframe src="https://code-lab.app/program/ad804cb0-afa7-4688-802e-6b026823e32d/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
+
+    <h2>Ashley vs Fish Match 2 - with FUNCTIONS</h2>
+    <p>Well well well, Ashley couldn't stay away and not only decided to race the fish AGAIN- but also bring functions into this. This race of course was held in the "100% made in Javascript" ball park on Java ave and HTML atreet. (Cick restart if you want to rewatch the race and maybe get different results.)</p>
+    <iframe src="https://code-lab.app/program/084ac25d-5190-4021-8584-4e879cb4fadd/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
+
+    <h2>Ashley does something different... with different sized clones?</h2>
+    <p>Uhhhh story for this: Ashley was playing with the functions rock, and she became made of functions. From there she like called herself multiple times with different numbered parameters and now we have a bunch of different sizes of Ashley. This is what she got afterakk from drinking in the "100% made in Javascript pond of awesome."</p>
+    <iframe src="https://code-lab.app/program/387378cb-c3da-4bc8-ab87-aafaa86e3e43/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
+
 </body>
 </html>
