--- a/javascripts_page.html
+++ b/javascripts_page.html
@@ -63,5 +63,15 @@
     <iframe src="https://code-lab.app/program/387378cb-c3da-4bc8-ab87-aafaa86e3e43/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
     <br><br>
 
+    <h2>Ashley Exists on A Page Unless...</h2>
+    <p>I gave this one a name as "Ashley Follow" doesn't have much a ring to it... BUUUT, use your mouse to drag a mini Ashley around the screen- but be careful- if you bring her to the left or right edge of the scheen- shegoes OUT OF BOUNDS :o . This made in 100% javascript program I had a little more fun with than some of the others. There is a way to get her out of bounds by clicking sooo you know... try it :p</p>
+    <iframe src="https://code-lab.app/program/c1fde428-c5e6-482d-8661-56574fb30cfa/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
+
+    <h2>Ashley Recommends you a Providence, RI Restaraunt!</h2>
+    <p>Pretty simple, this little mini quiz helps decide where you should go to eat in Providence RI, there are 3 possible restauraunts to get from mini Ashley's recommendations. A bit simple, but this little 100% made in Javascript took me WAYYYY too long to make, but a rewarding finish. Of course there are many really good restauraunts to recommend in Providence RI, but enjoy these 3 options (or none).</p>
+    <iframe src="https://code-lab.app/program/bff16003-faa3-4909-8248-ae885917b966/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
+
 </body>
 </html>
