--- a/javascripts_page.html
+++ b/javascripts_page.html
@@ -73,5 +73,14 @@
     <iframe src="https://code-lab.app/program/bff16003-faa3-4909-8248-ae885917b966/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
     <br><br>
 
+    <h2>Ashley gives you a fortune!</h2>
+    <p>In this silly little program, Ashley gives you a fortune based on some code she wrote in 100% javaScript, involving loops, random numbers, and more! Ashley had a bit too much fun making this program for no reason, so enjoy the quotes from video games, and the little genereic fortunes! (Hit restart for a new fortune :3c)</p>
+    <iframe src="https://code-lab.app/program/5d18b71e-b416-4a14-b527-28d44d860c3b/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
+
+    <h2>Ashley's Dance Floor!</h2>
+    <p>So, Ashley's 100% JavaScript Club all met up and had a little dance... that's where the story ends, but this is the first pure animation on this site sooooo... also say helo to "Evil Ashley," she has red hair and is like the opposite of Ashley... uhhhh no more lore.</p>
+    <iframe src="https://code-lab.app/program/df5f2b38-e7ef-407a-bdc3-44ac7e1676ca/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
 </body>
 </html>
