--- a/javascripts_page.html
+++ b/javascripts_page.html
@@ -82,5 +82,13 @@
     <p>So, Ashley's 100% JavaScript Club all met up and had a little dance... that's where the story ends, but this is the first pure animation on this site sooooo... also say helo to "Evil Ashley," she has red hair and is like the opposite of Ashley... uhhhh no more lore.</p>
     <iframe src="https://code-lab.app/program/df5f2b38-e7ef-407a-bdc3-44ac7e1676ca/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
     <br><br>
+
+    <h2>Ashley Tag!</h2>
+    <p>"Hey- wanna play tag?" This lil silly game is a game where you click around the screen to tag the constantly moving Ashleys on screen (yes that's Ashley, plural), andwhen you click an Ashley, Ashleys clicked in the radius around your mouse are tagged and are out of the game. This 100% made in Javascript game took me way too long to figure out how to do properly ;w; (click restart to play again)</p>
+    <iframe src="https://code-lab.app/program/8a751f43-559e-425e-8e4e-c8bc29e3c065/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
+
+
+
 </body>
 </html>
