--- a/javascripts_page.html
+++ b/javascripts_page.html
@@ -88,7 +88,15 @@
     <iframe src="https://code-lab.app/program/8a751f43-559e-425e-8e4e-c8bc29e3c065/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
     <br><br>
 
+    <h2>The avatar is... an OBJECT NOW?!</h2>
+    <p>That's right, Ashley's avatar (made in 100% Java Script) has become an object according to Java Script Laws of natural order. Behold- Ashley with a red shirt and no initial, Ashley with a yellow shirt and initials, and your average ashley in the back- but they're all using the same class and making Ashleys an object has made this possible to do easier in the future.</p>
+    <iframe src="https://code-lab.app/program/c22a16dd-e869-46af-bd27-bc26accbec8b/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
 
+    <h2>Ashley's Contact List</h2>
+    <p>Have you ever wondered who/what's in Ashley's contact list before? Unless you're my professors, probably not, but now- I bring to you Ashley's contact list that she made with 100% Java Script! Just click on a contact name, and see what their details are. (Note: for legal reasons, none of the contact information is of any real person, DO NOT attempt to contact them in the case someone ends up eventually taking sid contact information)</p>
+    <iframe src="https://code-lab.app/program/b0bd4058-3962-4074-9b7b-5acecd69128d/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
 
 </body>
 </html>
