--- a/javascripts_page.html
+++ b/javascripts_page.html
@@ -98,5 +98,20 @@
     <iframe src="https://code-lab.app/program/b0bd4058-3962-4074-9b7b-5acecd69128d/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
     <br><br>
 
+    <h2>Ashley's Tic Tac Toe!</h2>
+    <p>Let me be real with you for a second: I really want to be a game develeoper> Real time over, now I have created Tic Tac Toe 100% in Javascript. I have added my style to as much of the code as I could, so hope you enjoy. Remember, hit restart at the bottom to restart the program when the game ends.</p>
+    <iframe src="https://code-lab.app/program/ae80ef21-a488-4da3-9c80-fda0863e8a12/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
+
+    <h2>Pong</h2>
+    <p>Yeah so I used my knowledge of Javascript to work on Pong. I of course had to add some pink to Pong, and worked on this through 100% Javascript methods. Use the up and down arrows on your keyboard to play!</p>
+    <iframe src="https://code-lab.app/program/b0499731-5504-4539-bc5f-92e646e1a21e/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
+    
+    <h2>Flappy Ashley!!!</h2>
+    <p>Well well well, Ashley's greatest nemisis, pipes have invaded her 100% made in Java Script pink realm. Help Aslhey flap around the screen to avoid the pipes! Click or hold any key to make Ashley go up!</p>
+    <iframe src="https://code-lab.app/program/53f97213-defe-439f-abf4-92fc0e04d2dd/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
+
 </body>
 </html>
