--- a/javascripts_page.html
+++ b/javascripts_page.html
@@ -113,5 +113,10 @@
     <iframe src="https://code-lab.app/program/53f97213-defe-439f-abf4-92fc0e04d2dd/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
     <br><br>
 
+    <h2>Whack-A-Ram!!!</h2>
+    <p>Well, this was my final project in CSC 106. This is a Whack-A-Mole style (or Whack-A-Mole-like if you prefer) game in which you click on rams coming out of holes to get points! (Whacking them). This was made in partnership with Bianca Rietkerk in 100% Javascript!!! I created 2 videos for this project explaining the game features and code! Check them out with these links: <a href = "https://www.youtube.com/watch?v=z50QENJn4ns">Game Functions Video</a> and <a href = "https://www.youtube.com/watch?v=2HNPrk3fOj4">Game Code Explanation</a></p>
+    <iframe src="https://code-lab.app/program/d7b5feec-0b23-418e-9b87-ea732bdb0d0f/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe>
+    <br><br>
+
 </body>
 </html>
